hphp/hack/test/typecheck/reactive/rx_class2.php.exp
File "rx_class2.php", line 3, characters 3-13:
Reactive annotations are not allowed on classes, interfaces or traits. (Parsing[1002])
