hphp/hack/test/typecheck/reactive/rx_class2.php
<?hh

<<__RxShallow>>
interface A {
}
